# plthook-poc

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
source/: dlinfo-test.c  dynlib.h  libnode.c  libnode.h  libnode2.c  libnode2.cpp  libnode2.h  list-library-test.cpp  metacall.c  metacall.h  node-dynamic.c  node-static.c  node_loader.c  normal-executable.c
